--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,9 +21,10 @@
     "express": "^5.2.1",
     "express-fileupload": "^1.5.1",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.4.1",
+    "express-rate-limit": "^7.5.1",
     "express-validator": "^7.3.1",
     "helmet": "^8.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.1",
