--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "mongoose": "^9.0.2",
+    "pdf-parse": "^1.1.1",
     "xlsx": "^0.18.5"
   }
 }
